fix some alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2667,6 +2667,7 @@ input, select, textarea {
 	}
 
 		.image img {
+			height: 400px;
 			display: block;
 		}
 
